...
        android:layout_height="match_parent"
        tools:context=".HomeFragment"
        android:padding="8dp">

        <!-- RecyclerView per la lista delle challenge -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/challengeRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
