<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/colorBackground"
        tools:context=".AddChallengeFragment">

        <!-- Result Pic (optional) -->
        <ImageView
            android:id="@+id/addResultPic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="Upload Result Image"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/addRemoveResultPicButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/border1"
            android:contentDescription="Delete Image"
            android:padding="4dp"
            android:src="@drawable/baseline_delete_24"
            app:layout_constraintBottom_toBottomOf="@id/addResultPic"
            app:layout_constraintStart_toEndOf="@+id/addResultPic"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/addUploadImageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload Result Image\n(recommended size: 1080×1080 px)"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/addResultPic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <!-- Title Input -->
        <EditText
            android:id="@+id/addChallengeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Enter title"
            android:padding="12dp"
            android:textSize="18sp"
            android:maxLines="2"
            android:inputType="text"
            android:background="@drawable/border1"
            app:layout_constraintTop_toBottomOf="@id/addUploadImageLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Subject Input -->
        <EditText
            android:id="@+id/addChallengeConcept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Enter concept"
            android:padding="12dp"
            android:textSize="18sp"
            android:maxLines="1"
            android:inputType="text"
            android:background="@drawable/border1"
            android:drawableEnd="@drawable/ic_shuffle"
            android:drawablePadding="12dp"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@id/addChallengeTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Constraint Input -->
        <EditText
            android:id="@+id/addChallengeConstraint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Enter art constraint"
            android:padding="12dp"
            android:textSize="18sp"
            android:maxLines="1"
            android:inputType="text"
            android:background="@drawable/border1"
            android:drawableEnd="@drawable/ic_shuffle"
            android:drawablePadding="12dp"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@id/addChallengeConcept"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Optional Description Input -->
        <EditText
            android:id="@+id/addChallengeDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border1"
            android:gravity="top"
            android:hint="Enter description (optional)"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:minLines="6"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/addChallengeConstraint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Save Button -->
        <ImageButton
            android:id="@+id/addChallengeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="Save Challenge"
            android:padding="12dp"
            android:src="@drawable/baseline_done_24"
            app:tint="@color/colorOnAccent"
            app:layout_constraintTop_toBottomOf="@id/addChallengeDescription"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_save_button" />

        <ProgressBar
            android:id="@+id/addChallengeProgressBar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>