...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Bio -->
        <EditText
            android:id="@+id/editProfileBio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Bio"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:minLines="3"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Save Button -->
        <ImageButton
            android:id="@+id/saveProfileButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="Save Profile"
            android:padding="12dp"
            android:src="@drawable/baseline_done_24"
            app:tint="@color/colorOnAccent"
...
