...
        app:layout_constraintTop_toBottomOf="@id/profilePic"
        app:layout_constraintStart_toStartOf="@id/profilePic"
        app:layout_constraintEnd_toEndOf="@id/profilePic" />

    <!-- Bottone modifica profilo -->
    <ImageButton
        android:id="@+id/editProfileButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="Edit Profile"
        android:background="@drawable/border1"
...
        app:layout_constraintTop_toTopOf="@id/profilePic"
        app:layout_constraintStart_toEndOf="@id/profilePic"
        app:layout_constraintEnd_toStartOf="@id/editProfileButton"/>

    <!-- Bio dell'utente -->
    <TextView
        android:id="@+id/profileBio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/blackWhite"
        android:textSize="14sp"
...
