<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
    android:id="@+id/homeFragment"
    android:icon="@drawable/ic_home"
    android:title="Home" />

    <item
        android:id="@+id/userListFragment"
        android:icon="@drawable/ic_explore"
        android:title="Artists" />

    <item
        android:id="@+id/userProfileFragment"
        android:icon="@drawable/ic_profile"
        android:title="Profile" />

    <!-- Vuoto per il FAB -->
<!--    <item-->
<!--        android:id="@+id/newChallengeFragment"-->
<!--        android:enabled="false"-->
<!--        android:icon="@drawable/ic_transparent"-->
<!--        android:title="" />-->

</menu>
